--- a/todo/package.json
+++ b/todo/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.0",
+    "nodemon": "^2.0.12",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
   },
